# br

./: .gitignore  Cargo.toml  README.md  install.sh
docs/: coverage-report.md  next-steps.md
eval/: README.md  run.sh
eval/categories/: anti-bot-real-estate.txt  baseline-articles.txt  cf-challenge.txt  charset.txt  docs-generators.txt  gdpr-consent.txt  long-form.txt  news-articles.txt  pdf.txt  random-search.txt  random-tech-search.txt  social.txt  spa.txt  technical-docs.txt
src/: cache.rs  client.rs  main.rs  mcp.rs  paths.rs  proto.rs
src/daemon/: mod.rs  socket.rs
src/dashboard/: mod.rs
src/db/: mod.rs
src/db/migrations/: 001_init.sql  002_cache_indirect.sql
src/fetch/: extract.rs  mod.rs  ua.rs  waterfall.rs
src/fetch/fetchers/: mod.rs  plain.rs  rate_limit.rs  stealth.rs
src/fetch/strategies/: accept_md.rs  cloudflare_md.rs  headless.rs  llms_txt.rs  mod.rs  parse_html.rs  pdf.rs  wayback.rs
src/fetch/strategies/adapters/: github.rs  hackernews.rs  mod.rs  npm.rs  pypi.rs  reddit.rs  wikipedia.rs
src/registry/: agents.rs  mod.rs  tabs.rs
src/search/: mod.rs
src/webkit/: handle.rs  mod.rs  proto.rs  worker.rs
